# poc

./: .env.example  .env.filter_service  .env.video_metadata_service  README.md  docker-compose.yml  pyproject.toml
docs/: openapi.json
libs/: di.py
libs/config/: settings.py
libs/database/: base.py  elasticsearch.py  mongo.py
libs/logging/: __init__.py  es.py  formatter.py
libs/messaging/: base.py  rabbitmq.py
libs/models/: video_metadata.py
libs/models/video_metadata/: __init__.py  dto.py  types.py
libs/models/video_metadata/dto/: __init__.py  action_recognition_dto.py  company_dto.py  enriched_video_metadata_dto.py  video_metadata_dto.py  video_metadata_with_actions_dto.py
libs/models/video_metadata/types/: __init__.py  action_recognition.py  company.py  video_metadata.py  video_metadata_with_actions.py
libs/resolvers/: __init__.py  base.py  video_id.py
libs/services/: __init__.py  video_metadata_service.py
libs/storage/: base.py  elasticsearch.py  mongo.py
services/filter_service/: .env  Dockerfile  __init__.py  app.py  resolver.py  settings.py
services/ingest_service/: .env  Dockerfile  app.py  service.py  settings.py
services/video_metadata_service/: .env  Dockerfile  app.py  controller.py  dependencies.py  service.py  settings.py
tools/: generate_filter_mocks.py  generate_mocks.py  generate_openapi.py
