[project]
name = "poc-monorepo"
version = "0.1.0"
description = "Monorepo with video metadata service"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pika",
    "elasticsearch",
    "pydantic"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
